styling to prevent overflow/scrolling, increase store item costs

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -3,8 +3,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
+
+  & > div{
+    max-width:100%;
+    //height: 85vh;
+    //overflow: hidden;
+    //border: 1px solid red;
+  }
 }
 
 .description {
