--- a/src/styles/Store.module.scss
+++ b/src/styles/Store.module.scss
@@ -1,8 +1,8 @@
 .storeSection{
     border:1px solid #FFF;
-    height: 90vh;
     padding: 10px;
     min-width: 300px;
     width: 30%;
     overflow-y: scroll;
+    //max-height: 85vh;
 }
