--- a/src/styles/cookieClicker.module.scss
+++ b/src/styles/cookieClicker.module.scss
@@ -1,4 +1,5 @@
 .cookieImg{
+    margin-bottom: 20px;
 
     transition: transform 200ms;
 
@@ -14,7 +15,9 @@
     display:flex;
     flex-direction: row;
     height: 100%;
-    max-height: 100vh;
+    max-height:89vh;
+    overflow: hidden;
+    //max-height: 100vh;
     width: 100%;
     max-width:100vw;
 }
